--- a/HaierOven/AddStepDetailCell.xib
+++ b/HaierOven/AddStepDetailCell.xib
@@ -61,13 +61,13 @@
                         </variation>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JxA-TR-n25">
-                        <rect key="frame" x="290" y="8" width="22" height="22"/>
-                        <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="4" y="46" width="22" height="22"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="22" id="lVU-JZ-jQs"/>
-                            <constraint firstAttribute="height" constant="22" id="vF2-kF-uk7"/>
+                            <constraint firstAttribute="width" constant="22" id="71f-ED-hKe"/>
+                            <constraint firstAttribute="height" constant="22" id="XHX-Fd-G5p"/>
                         </constraints>
-                        <state key="normal" image="delete.png">
+                        <state key="normal" image="deletec.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
@@ -78,12 +78,12 @@
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="dBF-pF-ypj" secondAttribute="bottom" constant="8" id="1tT-nh-cun"/>
                     <constraint firstAttribute="trailing" secondItem="dBF-pF-ypj" secondAttribute="trailing" constant="8" id="1zC-7X-TJP"/>
-                    <constraint firstAttribute="trailing" secondItem="JxA-TR-n25" secondAttribute="trailing" constant="8" id="Lo8-7L-9Xn"/>
+                    <constraint firstItem="JxA-TR-n25" firstAttribute="top" secondItem="FI6-uc-BjX" secondAttribute="bottom" constant="8" id="JhZ-0i-Zuo"/>
                     <constraint firstItem="GAF-N6-vJB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="9" id="R5V-s9-1IZ"/>
-                    <constraint firstItem="JxA-TR-n25" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="apj-uZ-XE5"/>
                     <constraint firstItem="dBF-pF-ypj" firstAttribute="top" secondItem="GAF-N6-vJB" secondAttribute="bottom" constant="8" id="cG8-TR-SIc"/>
                     <constraint firstItem="FI6-uc-BjX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="pWk-HJ-dFt"/>
                     <constraint firstItem="GAF-N6-vJB" firstAttribute="leading" secondItem="FI6-uc-BjX" secondAttribute="trailing" constant="15" id="tDW-Xt-je7"/>
+                    <constraint firstItem="JxA-TR-n25" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="tPK-Ua-DbB"/>
                     <constraint firstItem="dBF-pF-ypj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="45" id="uCm-c7-lTg"/>
                     <constraint firstItem="FI6-uc-BjX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="wzh-2d-XVL"/>
                 </constraints>
@@ -99,6 +99,6 @@
     </objects>
     <resources>
         <image name="YJTP.png" width="120" height="120"/>
-        <image name="delete.png" width="22" height="22"/>
+        <image name="deletec.png" width="26" height="26"/>
     </resources>
 </document>
